--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,4 +7,8 @@
     "files.associations": {
         ".env.*": "env",
     },
+    "workbench.colorTheme": "Atom One Dark",
+    "python-envs.defaultEnvManager": "ms-python.python:conda",
+    "python-envs.defaultPackageManager": "ms-python.python:conda",
+    "python-envs.pythonProjects": [],
 }
